--- a/budgets.html
+++ b/budgets.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/app.css">
       <!-- Ikony -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
+    <!-- jequery UI css -->
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <!-- font awsome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <!-- google font -->
@@ -149,7 +151,7 @@
                 </div>
                 <div class="small-12 medium-4 columns">
                   <span>Month</span>
-                  <p><span class="name-of-month">February 2014</span></p>
+                   <input name="startDate" id="startDate" class="date-picker" />
                 </div>
               </div>
             </div>
@@ -171,20 +173,104 @@
                   <li>
                      <div class="chart-box">
                       <div class="circle-inside-chart chart-home-budget">
-                        <div class="item html">
-                          <h2>HTML</h2>
+                         <div class="text-container">
+                            <span class="budget-category">Home</span>
+                            <p><span class="spent-money-home-budget">100</span> of 200</p>
+                          </div>
+                      </div>
+                        <div class="item circle">
                           <svg width="285" height="285">
                              <g>
                               <title>Layer 1</title>
-                              <circle r="119" stroke-width="50" id="circle" class="circle_animation" cy="142" cx="142" stroke="#6fdb6f" fill="none"></circle>
-                              <circle cx="88" cy="40" r="3" stroke-width="4" id="circle" class="circle_animation" stroke="black" fill="black"></circle>
+                              <circle r="117" stroke-width="50" id="circle" class="circle_animation" cy="142" cx="142" stroke="#13bdd2" fill="none"></circle>
+                              <circle cx="48" cy="73" r="3" stroke-width="4" id="circle" class="circle_animation" stroke="black" fill="black"></circle>
                              </g>
                           </svg>
 
                         </div>
-                      </div>
                     </div>
                   </li>
+                  <li>
+                     <div class="chart-box">
+                      <div class="circle-inside-chart chart-home-budget">
+                         <div class="text-container">
+                            <span class="budget-category">Studies</span>
+                            <p><span class="spent-money-studies-budget">850</span> of 1000</p>
+                          </div>
+                      </div>
+                        <div class="item circle">
+                          <svg width="285" height="285">
+                             <g>
+                              <title>Layer 1</title>
+                              <circle r="117" stroke-width="50" id="circle" class="circle_animation" cy="142" cx="142" stroke="#fdbc00" fill="none"></circle>
+                              <circle cx="48" cy="73" r="3" stroke-width="4" id="circle" class="circle_animation" stroke="black" fill="black"></circle>
+                             </g>
+                          </svg>
+
+                        </div>
+                    </div>
+                  </li>
+                  <li>
+                     <div class="chart-box">
+                      <div class="circle-inside-chart chart-home-budget">
+                         <div class="text-container">
+                            <span class="budget-category">Food</span>
+                            <p><span class="spent-money-food-budget">50</span> of 300</p>
+                          </div>
+                      </div>
+                        <div class="item circle">
+                          <svg width="285" height="285">
+                             <g>
+                              <title>Layer 1</title>
+                              <circle r="117" stroke-width="50" id="circle" class="circle_animation" cy="142" cx="142" stroke="#13bdd2" fill="none"></circle>
+                              <circle cx="48" cy="73" r="3" stroke-width="4" id="circle" class="circle_animation" stroke="black" fill="black"></circle>
+                             </g>
+                          </svg>
+
+                        </div>
+                    </div>
+                  </li>
+                  <li>
+                     <div class="chart-box">
+                      <div class="circle-inside-chart chart-home-budget">
+                         <div class="text-container">
+                            <span class="budget-category">Car</span>
+                            <p><span class="spent-money-car-budget">100</span> of 200</p>
+                          </div>
+                      </div>
+                        <div class="item circle">
+                          <svg width="285" height="285">
+                             <g>
+                              <title>Layer 1</title>
+                              <circle r="117" stroke-width="50" id="circle" class="circle_animation" cy="142" cx="142" stroke="#e81c7b" fill="none"></circle>
+                              <circle cx="48" cy="73" r="3" stroke-width="4" id="circle" class="circle_animation" stroke="black" fill="black"></circle>
+                             </g>
+                          </svg>
+
+                        </div>
+                    </div>
+                  </li>
+                  <li>
+                     <div class="chart-box">
+                      <div class="circle-inside-chart chart-home-budget">
+                         <div class="text-container">
+                            <span class="budget-category">Cinema</span>
+                            <p><span class="spent-money-cinema-budget">20</span> of 50</p>
+                          </div>
+                      </div>
+                        <div class="item circle">
+                          <svg width="285" height="285">
+                             <g>
+                              <title>Layer 1</title>
+                              <circle r="117" stroke-width="50" id="circle" class="circle_animation" cy="142" cx="142" stroke="#13bdd2" fill="none"></circle>
+                              <circle cx="48" cy="73" r="3" stroke-width="4" id="circle" class="circle_animation" stroke="black" fill="black"></circle>
+                             </g>
+                          </svg>
+
+                        </div>
+                    </div>
+                  </li>
+
                 </ul>
               </div>
             </div>
