--- a/dashboard.html
+++ b/dashboard.html
@@ -183,7 +183,8 @@
       <section class="chart-section">
         <div class="row">
           <div class="small-12 columns">
-            <img src="img/chart.jpg" alt="chart">
+            <div id="container" style="min-width:310px; height:400px">
+            </div>
           </div>
         </div>
       </section>
@@ -311,5 +312,7 @@
         src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
         integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
         crossorigin="anonymous"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
   </body>
 </html>
